colocando un indicador a home en la app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
- <p> MIRAME!, no me quito!!! </p>
+
+  <%= link_to "Inicio" , root_path %>
+   
 <%= yield %>
 
 </body>
