implementado navbar global de mentira

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,14 @@
 <body>
 
   <%= link_to "Inicio" , root_path %>
+  <%= link_to "Contacto" , root_path %>
+  <%= link_to "About us" , root_path %>
+  <%= link_to "Grupos" , root_path %>
+  <%= link_to "Features" , root_path %>
+  <%= link_to "FAQs" , root_path %>
+  <%= link_to "Precios" , root_path %>
+  <%= link_to "Login" , root_path %>
+  
    
 <%= yield %>
 
