haciendo una barra de navegacion funcional

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,13 @@
 <body>
 
   <%= link_to "Inicio" , root_path %>
-  <%= link_to "Contacto" , root_path %>
-  <%= link_to "About us" , root_path %>
-  <%= link_to "Grupos" , root_path %>
-  <%= link_to "Features" , root_path %>
-  <%= link_to "FAQs" , root_path %>
-  <%= link_to "Precios" , root_path %>
+  <%= link_to "About us" , welcome_about_path %>
+  <%= link_to "Contacto" , welcome_contacto_path %>  
+  <%= link_to "Grupos" ,  welcome_grupo_path %>
+  <%= link_to "Features" , welcome_features_path %>
+  <%= link_to "FAQs" , welcome_faq_path %>
+  <%= link_to "Precios" , welcome_precios_path %>
+  <%= link_to "Invoices" , invoices_path %>
   <%= link_to "Login" , root_path %>
   
    
