--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,8 @@
       <% end %>
       
     </ul>
-
+    <p class="notice"><%= notice %> </p>
+    <p class="alert"><%= alert %> </p>
   <%= yield %>
   </div>
 </body>
