--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -36,6 +36,14 @@
         <%= f.text_field :salesperson %>
       </div>
     </div>
+  
+      <div class="control-group">
+      <%= f.label "Status", class: 'control-label' %><br>
+      <div class="controls">
+        <%= f.select(:status_type, options_for_select( [ ['PAID','PAID'],['PENDING','PENDING'],['LOST','LOST'],['XD',''] ], include_blank: true ) ); %>
+      </div>
+    </div>
+  
     <div class="control-group">
       <div class="controls">
         <%= f.submit 'Submit', class: 'btn btn-default' %>
