arreglando el employee, para que mostrara los nombres en vez del id

--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -16,8 +16,8 @@
 </p>
 
 <p>
-  <strong>Salesperson:</strong>
-  <%= @invoice.salesperson %>
+  <strong>Employee:</strong>
+  <%= @invoice.employee_id %>
 </p>
 
 <%= link_to 'Edit', edit_invoice_path(@invoice) %> |
