--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Employee:</strong>
-  <%= @invoice.employee_id %>
+  <%= @invoice.employee.name %>
 </p>
 
 <%= link_to 'Edit', edit_invoice_path(@invoice) %> |
